# asteroidfighter

./: .gitignore  .hgignore  AsteroidFighter.cbp  AsteroidFighter.dev  AsteroidFighter.ini  AsteroidFighter.layout  AsteroidFighter.workspace  AsteroidFighter.workspace.layout  AsteroidFighterAll.dev  AsteroidFighterDebug.cbp  AsteroidFighterDebug.cscope_file_list  AsteroidFighterDebug.depend  AsteroidFighterDebug.dev  AsteroidFighterDebug.layout  AsteroidFighterOld.dev  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.old  ProjectHome.md  ReadmeLinux.txt  go  go.bat  goSpeed  gocmake
AsteroidFighter/: AsteroidFighter  CMakeCache.txt  CMakeLists.txt  Help.cc  Help.h  MainMenu.cc  MainMenu.h  Makefile  Makefile.old  main.cc
Ide/: AsteroidFighter.sln
O3d/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.old  O3d.dsp  O3d.plg  O3dKamera.cc  O3dKamera.h  O3dObj.cc  O3dObj.h  O3dObjBSpline.cc  O3dObjBSplineSurf.cc  O3dObjBezier.cc  O3dObjFacet.cc  O3dObjLight.cc  O3dObjLine.cc  O3dObjNurbs.cc  O3dObjPLibFont.cc  O3dObjPLibFont.h  O3dObjPoint.cc  O3dObjPrim.cc  O3dObjPrim.h  O3dObjProps.cc  O3dObjShape.cc  O3dObjText.cc  O3dObjText.h  O3dSelectMode.cc  O3dSelectMode.h  O3dSelector.cc  PToken.cc  PToken.h  Raccourci vers Mp3Decode.exe.lnk  o3dobjbsplinesurf.cc
OpenAl/: OpenAl.cbp
Sav/: AAA_059.sav  AAA_092.sav  AutoSave_051.sav  AutoSave_052.sav  AutoSave_053.sav  AutoSave_054.sav  AutoSave_064.sav  AutoSave_071.sav  AutoSave_078.sav
Space/: ActionsShip.cc  ActionsShip.h  AsteroidesMaker.cc  AsteroidesMaker.h  CMakeCache.txt  CMakeLists.txt  Def.h  Makefile  Makefile.old  MinesMaker.cc  Pilot.cc  Pilot.h  Scene.cc  Scene.h  SceneArtifice.cc  SceneArtifice.h  SceneAsteroide.cc  SceneAsteroide.h  SceneAttack.cc  SceneAttack.h  SceneAttackCroisseur.cc  SceneAttackCroisseur.h  SceneBase.cc  SceneBase.h  SceneChaos.cc  SceneChaos.h  SceneGrotte.cc  SceneGrotte.h  SceneHammerAnvil.cc  SceneHammerAnvil.h  SceneLife.cc  SceneSprite.cc  SceneSprite.h  ShipsMaker.cc  ShipsMaker.h  Space.dsp  Space.dsw  Space.ncb  Space.opt  Space.plg  (+2 more)
Sprite3d/: Action.h  AnimatObj.cc  CMakeCache.txt  CMakeLists.txt  Collision.cc  (+35 more)
T3d/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.old  T3D.dsp  T3D.dsw  T3D.opt  T3D.plg  T3dBox.cc  T3dBox.h  T3dCalcul.cc  T3dColor.cc  T3dColor.h  T3dFontRaster.cc  T3dLoadBmp.cc  T3dLoadGif.cc  T3dLoadImg.cc  T3dPrimitiv.cc  T3dTab.h  T3dTexture.cc  T3dTransf.cc  T3dType.h  T3dVect3D.cc  TVectType.h  trackball.cc
(+246 files in other folders)
